# hs-sd-paxos

./: CHANGELOG.md  LICENSE  README.md  hs-sd-paxos.cabal
app/: Main.hs  Paxos.hs  Utils.hs
