cabal-version:      2.4
name:               hs-sd-paxos
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniil Kondratev
maintainer:         dankondr@yandex-team.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hs-sd-paxos
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Paxos
        Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        wreq ^>=0.5.3.3,
        cmdargs ^>=0.10.21,
        scotty ^>=0.12.1,
        aeson ^>=2.1.1.0,
        containers ^>=0.6.5.1,
        lens ^>=5.2
    hs-source-dirs:   app
    default-language: Haskell2010
